# actix-web-demo

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  recipe.json  sqlx-data.json
migrations/: 20220212133049_users.sql
src/: db.rs  errors.rs  handler.rs  main.rs  model.rs  state.rs
