[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "1"
actix-web = "3"
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0.99.0"
dotenv = "0.15.0"
env_logger = "*"
jsonwebtoken = "8"
once_cell = "1.9.0"
serde = "1"
serde_json = "1"
sqlx = {version = "0.4.2", features = ["runtime-actix-native-tls", "postgres", "chrono", "offline"]}
